--- a/smppserver/Cargo.toml
+++ b/smppserver/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 
 [dependencies]
 rocket={version="0.5.0"}
+log={version="0.4.21"}
 uuid={version="1.8.0", features=["v4"]}
+thiserror={version="1.0.60"}
