--- a/smppglobalchat/Cargo.toml
+++ b/smppglobalchat/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
-name = "smppserver"
+name = "smppglobalchat"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket={version="0.5.0"}
+tungstenite={version="0.23.0"}
 log={version="0.4.21"}
 uuid={version="1.8.0", features=["v4"]}
-thiserror={version="1.0.60"}
+thiserror={version="1.0.61"}
+toml={version="0.8.13"}
+serde={version="1.0.203", features=["derive"]}
