--- a/smppgc/Cargo.toml
+++ b/smppgc/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2021"
 
 [dependencies]
 stderrlog={version="0.6.0"}
-tungstenite={version="0.23.0"}
+tokio-tungstenite={version="0.23.1"}
+tokio={version="1.38.0", features=["macros", "rt-multi-thread", "sync"]}
+futures-util={version="0.3.30"}
 log={version="0.4.21"}
-uuid={version="1.8.0", features=["v4"]}
+uuid={version="1.9.0", features=["v4"]}
 thiserror={version="1.0.61"}
 toml={version="0.8.14"}
 serde={version="1.0.203", features=["derive"]}
-threadpool={version="1.8.1"}
 base64={version="0.22.1"}
