--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
 [workspace]
 resolver="2"
-members= ["smppgc"]
+members= ["smppgc", "lmetrics"]
+
+[workspace.package]
+version="2024.8.1"
+authors=["ldev <ldev@ldev.eu.org>"]
+edition = "2021"
