workin (bug: reason not ariving at client)

--- a/smppgc/Cargo.toml
+++ b/smppgc/Cargo.toml
@@ -9,13 +9,12 @@ edition = "2021"
 tokio-tungstenite={version="0.21.0"}
 tokio={version="1.38.0", features=["macros", "rt-multi-thread", "sync"]}
 futures-util={version="0.3.30"}
+log={version="0.4.21"}
 uuid={version="1.9.0", features=["v4"]}
-urlencoding={version="2.1"}
 thiserror={version="1.0.61"}
-toml={version="0.8.14"}
-serde={version="1.0.203", features=["derive"]}
 base64={version="0.22.1"}
-lmetrics={path="../lmetrics"}
+lmetrics={path="../lmetrics", features=["rocket"]}
 
 rocket={version="0.5.1"}
 rocket_ws={version="0.1.1"}
+rocket_dyn_templates={version="0.2.0", features=["handlebars"]}
