--- a/smppgc/Rocket.toml
+++ b/smppgc/Rocket.toml
@@ -2,7 +2,9 @@
 max_stored_messages=30
 max_reserved_names=2
 max_users=1000
-port = 8081
+max_username_len=30
+max_message_len=150
+port = 8080
 offline=false
 
 [default.rate_limit]
@@ -13,7 +15,7 @@ kick_burst=1000
 [debug]
 static_dir="www/static"
 template_dir="www/templates"
-address = "127.0.0.1"
+address = "0.0.0.0"
 log_level="normal"
 
 [release]
